// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Affix getAffixed is true test of offsetTop 1`] = `
<DocumentFragment>
  <div>
    <div
      class="za-affix"
      style="position: fixed; top: 100000px; width: 0px; height: 0px;"
    >
      <div>
        Affix Node
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Affix offsetBottom 1`] = `
<DocumentFragment>
  <div>
    <div
      class="za-affix"
    >
      <div>
        Affix Node
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Affix offsetTop 1`] = `
<DocumentFragment>
  <div>
    <div
      class="za-affix"
    >
      <div>
        Affix Node
      </div>
    </div>
  </div>
</DocumentFragment>
`;
